components/ua/authenticate-frontend/overlays/prod/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authenticate-frontend
spec:
  template:
    spec:
      containers:
        - name: authenticate-frontend
          # version: 1.0.6
          image: ghcr.io/isisbusapps/authenticate-frontend@sha256:7a857555536f3c7672b5d2810c05e8376f57b707ed0cef854096370f7966edae
          volumeMounts:
            - mountPath: /front_end/config/allowed-redirects.json
              name: allowed-redirects
              subPath: allowed-redirects.json
            - mountPath: /front_end/config/internal-redirects.json
              name: internal-redirects
              subPath: internal-redirects.json
      volumes:
        - name: allowed-redirects
          configMap:
            name: allowed-redirects
        - name: internal-redirects
          configMap:
            name: internal-redirects
